// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`solidarity should generate correct summary 1`] = `
"## Message
foo

## Configuration
Below is the configuration used for this check run:
\`\`\`yml
rules:
  master:
    regex:
      - /master/gi
    level: warning
    alternatives:
      - primary
      - main
      - leader
      - active
      - writer
  slave:
    regex:
      - /slave/gi
    level: warning
  whitelist:
    regex:
      - '/white[_-]*list/gi'
    level: warning
  blacklist:
    regex:
      - '/black[_-]*list/gi'
    level: warning
  grandfathered:
    regex:
      - /grandfathered/gi
    level: warning
  sanity_check:
    regex:
      - '/sanity[_-]*check/gi'
    level: warning
  man_hours:
    regex:
      - '/man[_-]*hours/gi'
    level: warning
ignore:
  - .github/in-solidarity.yml

\`\`\`

For more information on configuration and rules, check the [documentation](https://github.com/jpoehnelt/in-solidarity-bot/blob/main/docs/README.md).

## App version
* version: [v1.0.0](https://github.com/jpoehnelt/in-solidarity-bot/releases/tag/v1.0.0)

* sha: [unknown](https://github.com/jpoehnelt/in-solidarity-bot/commit/unknown)
"
`;

exports[`solidarity should run check on failing diff 1`] = `
"
## Configuration
Below is the configuration used for this check run:
\`\`\`yml
rules:
  master:
    regex:
      - /master/gi
    level: warning
    alternatives:
      - primary
      - main
      - leader
      - active
      - writer
  slave:
    regex:
      - /slave/gi
    level: warning
  whitelist:
    regex:
      - '/white[_-]*list/gi'
    level: warning
  blacklist:
    regex:
      - '/black[_-]*list/gi'
    level: warning
  grandfathered:
    regex:
      - /grandfathered/gi
    level: warning
  sanity_check:
    regex:
      - '/sanity[_-]*check/gi'
    level: warning
  man_hours:
    regex:
      - '/man[_-]*hours/gi'
    level: warning
ignore:
  - .github/in-solidarity.yml

\`\`\`

For more information on configuration and rules, check the [documentation](https://github.com/jpoehnelt/in-solidarity-bot/blob/main/docs/README.md).

## App version
* version: [v1.0.0](https://github.com/jpoehnelt/in-solidarity-bot/releases/tag/v1.0.0)

* sha: [unknown](https://github.com/jpoehnelt/in-solidarity-bot/commit/unknown)
"
`;
